// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CLI TUI command > keeps wide and narrow terminal render snapshots stable > narrow command palette 1`] = `
"Agent Hub  TUI Project  #review  @agent  ctx runtime_injection  i...
[Work]  Graph  Runs  Review  Tasks  Memory  Help

Command Palette
  Current context
    focus work
    command agent-hub role-calls show call_parent
  Runs
    agent-hub runs show run_1
    agent-hub runs diff run_1 --stat
    agent-hub risks show run_1
  RoleCalls
    agent-hub role-calls show call_parent
  Review
    agent-hub role-calls show call_child
  Memory
    agent-hub memory list --project-id project_1
    agent-hub memory approve <memory-id>
    agent-hub memory reject <memory-id>
  Keys
    : close palette
    p print focused command
    ctrl+j submit composer

Actions: tab focus  enter open  : palette  c continue  k cancel  ...
> @agent prompt
"
`;

exports[`CLI TUI command > keeps wide and narrow terminal render snapshots stable > wide command palette 1`] = `
"Agent Hub  TUI Project  #review  @agent  ctx runtime_injection  iter 0/4  risk unknown
[Work]  Graph  Runs  Review  Tasks  Memory  Help

Command Palette
  Current context
    focus work
    command agent-hub role-calls show call_parent
  Runs
    agent-hub runs show run_1
    agent-hub runs diff run_1 --stat
    agent-hub risks show run_1
  RoleCalls
    agent-hub role-calls show call_parent
  Review
    agent-hub role-calls show call_child
  Memory
    agent-hub memory list --project-id project_1
    agent-hub memory approve <memory-id>
    agent-hub memory reject <memory-id>
  Keys
    : close palette
    p print focused command
    ctrl+j submit composer

Actions: tab focus  enter open  : palette  c continue  k cancel  a accept  j reject  p commands  ctrl+j submit  r rev...
> @agent prompt
"
`;

exports[`CLI TUI command > renders context-read failures with CLI recovery commands > context read failure recovery 1`] = `
"Agent Hub  project_broken  no-thread  @fake  ctx runtime_injection  iter 0  risk unknown
[Work]  Graph  Runs  Review  Tasks  Memory  Help
Warning: failed to read TUI context: database read failed
Warning: recovery: agent-hub project list
Warning: recovery: agent-hub rooms list --project-id project_broken
Warning: recovery: agent-hub tui --help

Transcript
  No messages in the current context.

RoleCall Graph  active 0  waiting 0  pending 0  stop terminal
  No RoleCalls in the current context.

Runs
  No runs in the current context.

Selected
TUI context unavailable
  The current local context could not be read.
  latest failed to read TUI context: database read failed
  commands:
    agent-hub project list
    agent-hub rooms list --project-id project_broken
    agent-hub tui --help

Actions: tab focus  enter open  : palette  c continue  k cancel  a accept  j reject  p commands  ctrl+j submit  r rev...
> @fake prompt
"
`;

exports[`CLI TUI command > renders missing registration recovery instead of failing launch > missing registration recovery 1`] = `
"Agent Hub  unregistered  no-thread  @fake  ctx runtime_injection  iter 0  risk unknown
[Work]  Graph  Runs  Review  Tasks  Memory  Help
Warning: project root /tmp/unregistered-tui-project is not registered
Warning: recovery: agent-hub project add --name <name> --root /tmp/unregistered-tui-project

Transcript
  No messages in the current context.

RoleCall Graph  active 0  waiting 0  pending 0  stop terminal
  No RoleCalls in the current context.

Runs
  No runs in the current context.

Selected
No current context
  No local review evidence is available yet.

Actions: tab focus  enter open  : palette  c continue  k cancel  a accept  j reject  p commands  ctrl+j submit  r rev...
> @fake prompt
"
`;
